# Citation_Tool

./: CMakeLists.txt  LCT  LCT.cpp  README.md  WCT  WCT.cpp
includes/: basicfunc.h  files.h  includes.h
